# prom2alert

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  ci.yml
docker/rootfs/: config.ini.tmp  prom2teams_start.sh  replace_config.py  uwsgi.ini.tmp
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
prom2notify/app/: api.py  configuration.py  sender.py  teams_client.py
prom2notify/app/versions/v1/: __init__.py  model.py  namespace.py
prom2notify/app/versions/v2/: __init__.py  model.py  namespace.py
prom2notify/backends/: __init__.py  discord.py  generic.py  slack.py  teams.py  telegram.py
prom2notify/config/: logging.yml  settings.py
prom2notify/prometheus/: message_schema.py
prom2notify/teams/: alert_mapper.py  composer.py  teams_alert_schema.py
tests/: test_alert_validation.py  test_app_configuration.py  test_backends.py  test_json_fields.py
tests/data/: all_fields.ini
tests/e2e/: docker-compose.yml
