[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prom2alert"
version = "0.2.0"
description = "Multi-backend alert relay for Prometheus Alertmanager (Teams, Slack, Discord, Telegram, Generic Webhooks)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zyqtron", email = "webmasteur1334@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "flask-restx>=0.5",
    "marshmallow>=3.0",
    "pyyaml>=5.0",
    "jinja2>=3.0",
    "requests>=2.25",
    "gunicorn>=20.0",
    "deepdiff>=5.0",
    "tenacity>=8.0",
    "prometheus-flask-exporter>=0.18",
    "werkzeug>=2.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/zyqtron/prom2alert"
Repository = "https://github.com/zyqtron/prom2alert"

[project.scripts]
prom2alert = "prom2notify.app.api:main"

[tool.setuptools.packages.find]
include = ["prom2notify*"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.yml", "*.yaml", "*.j2", "*.ico"]
