[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prom2notify"
version = "0.2.0"
description = "Multi-backend alert relay for Prometheus Alertmanager (Teams, Slack, Discord, Telegram, Generic Webhooks)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "zyqtron", email = "webmasteur1334@gmail.com"}
]
keywords = ["prometheus", "alertmanager", "teams", "slack", "discord", "telegram", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "flask-restx>=1.3",
    "marshmallow>=3.21",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "gunicorn",
    "deepdiff>=7.0",
    "tenacity>=6.0",
    "prometheus-flask-exporter>=0.9",
    "werkzeug>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/zyqtron/prom2notify"
Repository = "https://github.com/zyqtron/prom2notify"

[tool.setuptools.packages.find]
include = ["prom2notify*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
prom2notify = [
    "resources/templates/*.j2",
    "config/*.yml",
    "app/static/*",
]
